added bundle lock for heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,5 @@ test:
 production:
   <<: *default
   database: trespass_production
+  username: trespass
+  password: <%= ENV['TRESPASS_DATABASE_PASSWORD'] %>
